components/ua/mailchimp-webhooks/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailchimp-webhooks
spec:
  template:
    spec:
      containers:
        - name: mailchimp-webhooks
          image: ghcr.io/isisbusapps/mailchimp-webhooks:dev
          ports:
            - containerPort: 7005
