components/ua/mailchimp-webhooks/overlays/dev/enable-debug-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailchimp-webhooks
spec:
  ports:
    - name: debug
      protocol: TCP
      port: 7005
      targetPort: 7005
