components/ua/mailchimp-webhooks/overlays/dev/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailchimp-webhooks
spec:
  parentRefs:
  - name: envoy-gateway
    kind: Gateway
    namespace: envoy-gateway-system
    sectionName: https-facilities
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mailchimp
    backendRefs:
    - name: mailchimp-webhooks
      port: 3000
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
